finished all the sections except the features section and the footer

--- a/index.html
+++ b/index.html
@@ -1,25 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keithston-delecious cafe</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <section class="top-page">
-        <header class="header">
-        <img src="photos/logo.png" alt="logo du site">
+    <header class="header">
+        <img src="/photos/logo.png" alt="Logo">
         <nav class="nav">
-            <li>Homme</li>
-            <li>blog</li>
-            <li>contact us</li>
-            <li>services</li>
+            <a href="#">Home</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Services</a>
         </nav>
-        </header>
-        <div class="landing-page">
-            <h1>Sweet Treats, Perfect Eats</h1>
+    </header>
+
+    <section class="hero">
+        <div class="hero-content">
+        <h4>delecious cafe</h4>
+        <h1>Sweet Treats,</br>Perfect Eats</h1>
+        <div class="buttons">
+            <button class="btn-primary">Shop Now</button>
+            <button class="btn-secondary">Learn More</button>
+            </div>
+            </div>
+    </section>
+
+            <section class="Blog">
+                <div class="title">
+                    <h1>Top Products</h1>
+                    <div class="cards-container">
+                            <div class="card">
+                                <img src="/photos/top_product3.png">
+                                <p>whole grain bread</p>
+                                 <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                            <div class="card">
+                                <img src="/photos/top_product2.png">
+                                <p>whole grain bread</p>
+                                <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                            <div class="card">
+                                <img src="/photos/top_product1.png">
+                                <p>whole grain bread</p>
+                                 <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                            <div class="card">
+                                <img src="/photos/top_product6.png">
+                                <p>whole grain bread</p>
+                                 <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                            <div class="card">
+                                <img src="/photos/top_product5.png">
+                                <p>whole grain bread</p>
+                                <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                            <div class="card">
+                                <img src="/photos/top_product4.png">
+                                <p>whole grain bread</p>
+                                <h3>$40</h3>
+                                <button class="button">add</button>
+                            </div>
+                        </div>
+</div>
+           </section>
+
+    <section class="Services">
+        <div class="More">
+            <h1>20% Off Your First Order</h1>
+            <p>Suspendisse ac rhoncus nisl,</br> eu tempor urna. Curabitur vel </br>bibenjgg.</p>
+            <button>Learn More</button>
         </div>
     </section>
+
+    <section class="explore more">
+        <div class="explorer">
+            <h1>Explorer More</h1>
+            <nav class="navbar">
+            <a href="#">Cake</a>
+            <a href="#">Muffins</a>
+            <a href="#">croissant</a>
+            <a href="#">bread</a>
+            <a href="#">tart</a>
+            <a href="#">favorite</a>
+            </nav>
+            <div class="pics-cards-container">
+                <div class="pics">
+                    <img src="/photos/explore_more1.png">
+                </div>
+                <div class="pics">
+                    <img src="/photos/explore_more2.png">
+                </div>
+                <div class="pics">
+                    <img src="/photos/explore_more3.png">
+                </div>
+                <div class="pics">
+                    <img src="/photos/explore_more4.png">
+                </div>
+                <div class="pics">
+                    <img src="/photos/explore_more5.png">
+                </div>
+                <div class="pics">
+                    <img src="/photos/explore_more6.png">
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="about-us">
+        <div class="about">
+            <h1>About Us</h1>
+            <p>Suspendisse ac rhoncus nisl,</br> eu tempor urna. Curabitur vel </br>bibendum lorem. Morbi convallis</p>
+            <button class="read">Read More</button>
+        </div>
+
+    </section>
+    <section class="features">
+        <h1>Features Treats</h1>
+        <div class="features-container">
+            <div class="treats">
+        <img src="/photos/featured1.png">
+        <p>puffy pastery    $8</p>
+            </div>
+    <div class="treats">
+        <img src="/photos/featured2.png">
+        <p>doghnuts     $8</p>
+    </div>
+    <div class="treats">
+        <img src="/photos/featured3.png">
+        <p>brownise     $8</p>
+    </div>
+        </div>
+
+    </section>
 </body>
+
 </html>
