--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
         </div>
 
     </section>
+    <footer class="buttom-page">
+        <div class="logo">
+            <img src="/photos/logo.png">
+             </div>
+        <nav class="nav-follow-us">
+            <a href="">Follow Us</a>
+    
+        </nav>
+
+    </footer>
 </body>
 
 </html>
