finished the whole project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keithston-delecious cafe</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -142,15 +144,54 @@
         </div>
 
     </section>
-    <footer class="buttom-page">
-        <div class="logo">
-            <img src="/photos/logo.png">
-             </div>
-        <nav class="nav-follow-us">
-            <a href="">Follow Us</a>
-    
-        </nav>
+   <footer class="footer">
+    <img src="/photos/logo.png">
+    <div class="footer-social">
+    <p>Follow us</p>
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+    <a href="#"><i class="fab fa-whatsapp"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+  </div>
+  <div class="footer-top">
+    <div class="about">
+      <h3>About Us</h3>
+      <p>(456) 789-12301</p>
+      <p>info@modrino.co.uk</p>
+      <p>South 13th street</p>
+      <p>New york America</p>
+    </div>
+   <div class="explore">
+      <h3>Explore</h3>
+      <nav class="navfooter">
+        <a href="#">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact us</a>
+        <a href="#">Services</a>
+      </nav>
+    </div>
+    <div class="recent-news">
+      <h3>Recent News</h3>
+      <div class="news-item">
+        <img src="/photos/explore_more1.png">
+        <div>
+          <P>June 14,2024</p>
+          <p>Puff pastry bliss.</p>
+        </div>
+      </div>
+      <div class="news-item">
+        <img src="/photos/explore_more3.png">
+        <div>
+          <p>June 14,2024</p>
+          <p>Puff pastry bliss.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="footer-bottom">
+    <p>© 2024 Bake House. All rights reserved</p>
+  </div>
     </footer>
 </body>
 
